# wallet-sdk

./: .gitignore  CHANGELOG.md  DEBUG_AR_UPLOAD.md  QUICK_START.md  README.md  REVERSE_ENGINEERING_DEMO.md  SECURITY_ANALYSIS.md  SECURITY_FAQ.md  STATIC_LIBRARY_CPP_USAGE.md  test_ar_format.sh  test_upload_ar.sh
TccCompiler/: settings.gradle
TccCompiler/app/: build.gradle
TccCompiler/app/src/main/: AndroidManifest.xml
TccCompiler/app/src/main/res/layout/: activity_main.xml
TccCompiler/app/src/main/res/values/: strings.xml
TccCompiler/tcclib/: build.gradle  consumer-rules.pro
TccCompiler/tcclib/src/main/cpp/: CMakeLists.txt  tcc_bridge.cpp
TccCompiler/tcclib/src/main/cpp/libtcc/: GET_LIBTCC.md  arm-tok.h  config.h  i386-asm.c  i386-asm.h  i386-tok.h  libtcc.c  stab.def  tccelf.c  tccpp.c  x86_64-asm.h
TccCompiler/tcclib/src/main/res/values/: strings.xml
VaultUploader/: README.md  STATIC_LIBRARY_GUIDE.md  settings.gradle
VaultUploader/app/: build.gradle
VaultUploader/app/libs/: tcclib-release.aar
VaultUploader/app/src/main/: AndroidManifest.xml
VaultUploader/app/src/main/res/layout/: activity_main.xml
VaultUploader/app/src/main/res/values/: strings.xml
VaultUploader/app/src/main/res/xml/: network_security_config.xml
WeChatHelper/: README.md  settings.gradle
WeChatHelper/app/: build.gradle  proguard-rules.pro
WeChatHelper/app/src/main/: AndroidManifest.xml
WeChatHelper/app/src/main/res/layout/: activity_main.xml  item_member.xml
WeChatHelper/app/src/main/res/values/: strings.xml
examples/cpp_static_lib/: .gitignore  Makefile  README.md  advanced_example.cpp  main.cpp
https-server/: FILE_FORMAT_DETECTION.md  Makefile  README.md  SERVER_DEBUG.md  check_file.sh  check_format.cpp  server.cpp  start.sh  test_detection  test_detection.cpp  test_server.sh  test_upload.sh
tcc-ubuntu/: Makefile  QUICKSTART.md  README.md  build.sh  example.cpp  tcc_wrapper.cpp  tcc_wrapper.h  test.c  wrapper_test.cpp
(+15 files in other folders)
